tests/error/private_func_nocall_out.gw
#! [contains] can't access private
class C {
  fun private void test(){}
}

var C c;
c.test;
